--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -7,11 +7,14 @@
   background: url("https://cdn.glitch.com/f69fa717-be61-48e8-9ad2-e8edd524fe90%2Fshark.jpeg?v=1621051349334")
     no-repeat center fixed;
   background-size: cover;
+  overflow: hidden;
   display: grid;
   min-height: 100vh;
   max-height: 100vh;
   min-width: 100vw;
   max-width: 100vw;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
   grid-template-columns: minmax(0, 1fr);
   grid-template-rows:
@@ -19,7 +22,7 @@
     4rem;
 }
 
-.video-area {
+.video-container {
   padding: 1rem;
   display: grid;
   align-items: center;
@@ -29,13 +32,14 @@
   border-radius: 10px;
 }
 
-.guests {
+.user-container {
   display: grid;
+  padding: 2rem 0;
   grid-auto-columns: minmax(0, 1fr);
   column-gap: 0.5rem;
 }
 
-.info {
+.info-container {
   display: grid;
   grid-template-columns: max-content max-content;
   grid-template-rows: minmax(0, 1fr);
@@ -58,12 +62,13 @@
   justify-content: center;
 }
 
-.video {
+.user {
   border-radius: 20px;
   overflow: hidden;
+  position: relative;
 }
 
-.video-camera {
+.user-camera {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -74,28 +79,31 @@
   background-color: var(--color-jet);
   width: 200px;
   height: 120px;
+  max-width: 100%;
+  position: relative;
+
   box-shadow: 0 8px 6px -6px var(--color-jet);
 }
 
-.video-username {
-  position: relative;
-  bottom: 37px;
-  left: 28px;
+.user-name {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  padding: 0.5rem 1rem;
   color: var(--color-linen);
+  background: linear-gradient(0, rgba(0, 0, 0, 0.45), transparent),
+    linear-gradient(
+      0,
+      rgba(0, 0, 0, 0.75),
+      rgba(0, 0, 0, 0.45),
+      rgba(0, 0, 0, 0.15),
+      transparent,
+      transparent
+    );
   z-index: 1;
 }
 
-.video-camera {
-  border-radius: 24px;
-  background-color: var(--color-jet);
-  position: relative;
-  max-width: 100%;
-  width: 200px;
-  height: 120px;
-  box-shadow: 0 8px 6px -6px var(--color-jet);
-}
-
-.control-bar {
+.controls-container {
   align-items: center;
   display: grid;
   grid-template-rows: minmax(0, 1fr);
@@ -274,7 +282,7 @@ footer {
 
 #leaveRoomButton {
   text-transform: uppercase;
-  border: 3px solid var(--color-linen);
+  border: 2px solid var(--color-linen);
   color: var(--color-text);
   background-color: transparent;
 }
@@ -298,19 +306,6 @@ video {
   border-radius: 10px;
 }
 
-.controls,
-.controls > * {
-  padding: 0;
-  margin: 0;
-}
-.controls {
-  overflow: hidden;
-  background: transparent;
-  width: 100%;
-  height: 8.0971659919028340080971659919028%; /* of figure's height */
-  /* 	position:relative; */
-}
-
 .controls[data-state="hidden"] {
   display: none;
 }
@@ -323,31 +318,86 @@ button[data-state="mute"] {
   /* font-size: 1.3rem; */
 }
 
-/* ================================ Songs modal ======================== */
-
-#songModal {
-  font-family: "Lato", "Helvetica Neue", arial, sans-serif;
-  font-weight: 400;
-  color: #5e6c76;
-  max-width: 75rem;
-  padding: 2rem 1rem;
+.jquery-modal.blocker {
+  background-color: transparent;
 }
 
-#songModal.modal a.close-modal {
+/* ================================ Songs modal ======================== */
+.modal.modal__large {
+  background-color: rgba(255, 255, 255, 0.75);
+  padding: 1rem;
+  max-width: 100%;
+}
+
+.modal-content {
+  color: var(--color-slate);
+  width: 100%;
+  max-width: 75rem;
+  display: grid;
+  grid-template-rows: 1fr 5rem;
+  row-gap: 1rem;
+  grid-template-rows: 1fr max-content;
+}
+
+.modal.modal__large .close-modal {
   filter: invert(1);
   top: 5px;
   right: 5px;
 }
 
-.jukeboxes {
+.catalog-grid {
   display: grid;
-  grid-row-gap: 2rem;
-  grid-template-columns: 100%;
-  max-height: 50vh;
-  overflow-x: hidden;
+  gap: 1rem;
+  max-height: 60vh;
+  padding: 1rem;
   overflow-y: auto;
   position: relative;
   width: 100%;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+@media (min-width: 768px) {
+  .catalog-grid {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1024px) {
+  .catalog-grid {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+}
+
+.catalog-controls {
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  width: 100%;
+}
+
+.controt-btn {
+  border: 1px solid var(--color-old-laundry);
+  border-radius: 2px;
+  display: block;
+  padding: 1rem 0.5rem;
+  text-align: center;
+  width: 100%;
+}
+
+@media (min-width: 28rem) {
+}
+
+@media (min-width: 42rem) {
+  .catalog-controls {
+    grid-template-columns: unset;
+    justify-content: end;
+  }
+  .controls .button {
+    padding: 0 4rem;
+  }
 }
 
 #added-notice {
@@ -393,30 +443,9 @@ button[data-state="mute"] {
   color: var(--color-old-yellow);
 }
 
-@media (min-width: 440px) {
-  .jukeboxes {
-    grid-column-gap: 2vw;
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-}
-
-@media (min-width: 35rem) {
-  .jukeboxes {
-    grid-column-gap: 1vw;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-}
-
-@media (min-width: 768px) {
-  .jukeboxes {
-    grid-column-gap: 1vw;
-    grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
-}
-
 /* Individual jukebox songs */
 
-.jukebox {
+.catalog-item {
   background: none;
   border: none;
   cursor: pointer;
@@ -433,9 +462,10 @@ button[data-state="mute"] {
   border-radius: 4px;
 }
 
-.jukebox img {
+.catalog-item img {
   width: 100%;
   height: auto;
+  border-radius: 24px;
   border: 4px solid transparent;
 }
 
@@ -459,40 +489,6 @@ button[data-state="mute"] {
 .title {
   font-weight: var(--weight-title);
   margin: 0.5rem 0 0.25rem;
-}
-
-/* Jukebox controls */
-
-.controls {
-  width: 100%;
-  margin-top: 20px;
-}
-
-@media (min-width: 28rem) {
-  .controls {
-    display: flex;
-    justify-content: flex-end;
-  }
-}
-
-.control {
-  border: 1px solid var(--color-old-laundry);
-  border-radius: 2px;
-  display: block;
-  padding: 1rem 0.5rem;
-  text-align: center;
-  width: 100%;
-}
-
-.controls .button {
-  margin-left: 1rem;
-  padding: 0 1rem;
-}
-
-@media (min-width: 42rem) {
-  .controls .button {
-    padding: 0 4rem;
-  }
 }
 
 .copyWrapper {
@@ -646,7 +642,7 @@ button[data-state="mute"] {
 
 #feedback {
   border-radius: 50%;
-  width: 2.25rem;
+  height: auto;
   width: 2.25rem;
   background: var(--color-linen)
     url("https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ffeedback.svg?v=1596918776029")
@@ -656,7 +652,6 @@ button[data-state="mute"] {
 
 @media screen and (min-width: 768px) {
   #feedback {
-    height: 3rem;
     width: 3rem;
   }
 }
