--- a/public/styles/shared.css
+++ b/public/styles/shared.css
@@ -358,7 +358,7 @@ Y88888P YP   YP    YP     `Y88P'  ~Y8888P'    YP
   align-items: center;
   justify-content: center;
   font-size: var(--font-size-sm);
-  padding: 0.125rem 0.75rem 0.05rem;
+  padding: 0.25rem 0.75rem 0.05rem;
   min-height: 2.25rem;
   font-weight: 600;
   border: 3px solid var(--color-midnight);
@@ -369,6 +369,11 @@ Y88888P YP   YP    YP     `Y88P'  ~Y8888P'    YP
   border-radius: 0.5rem;
   transition: 0.2s background-color;
   text-align: center;
+}
+
+.button__small {
+  font-size: var(--font-size-xs);
+  padding: 0.25rem 0.75rem 0.05rem;
 }
 
 .button:hover {
@@ -412,6 +417,11 @@ Y88888P YP   YP    YP     `Y88P'  ~Y8888P'    YP
   .button {
     padding: 0.25rem 1.5rem 0.1rem;
     min-height: 3rem;
+  }
+  .button__small {
+    min-height: 2.25rem;
+    font-size: var(--font-size-sm);
+    padding: 0.25rem 1rem 0.01rem;
   }
 }
 
