--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -370,7 +370,7 @@ button[data-state="mute"] {
 .modal.modal__large {
   background-color: rgba(255, 255, 255, 0.75);
   padding: 1rem;
-  max-width: 100%;
+  max-width: 1200px;
 }
 
 .modal-content {
