--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -118,7 +118,7 @@
   font-size: 10px;
   padding: 0.25rem 1rem;
   color: var(--color-linen);
-  background: linear-gradient(0, rgba(0, 0, 0, 0.75), transparent),
+  background: linear-gradient(0, rgba(0, 0, 0, 1), transparent),
     linear-gradient(
       0,
       rgba(0, 0, 0, 0.75),
@@ -242,6 +242,11 @@
 }
 
 #playlistButton:hover {
+  opacity: 90%;
+  transition: opacity 0.2s ease-in;
+}
+
+#chatButton:hover {
   opacity: 90%;
   transition: opacity 0.2s ease-in;
 }
