Fix up structure and remove unnecessary lerna stuff

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -33,7 +33,7 @@
   transition: max-height 100ms linear;
 }
 
-.header:not(.header__revealed) .navbar-link__home {
+.header:not(.header__revealed) .navbar-link__logo {
   transition: opacity 200ms ease 200ms;
 }
 
@@ -63,12 +63,12 @@
   --color-text: var(--color-midnight);
 }
 
-.navbar-link__home {
+.navbar-link__logo {
   opacity: 0;
 }
 
-.header__revealed .navbar-link__home,
-.header__expanded .navbar-link__home {
+.header__revealed .navbar-link__logo,
+.header__expanded .navbar-link__logo {
   opacity: 1;
 }
 
