--- a/public/styles/shared.css
+++ b/public/styles/shared.css
@@ -467,7 +467,7 @@ YP   YP Y88888P YP   YP Y8888D' Y88888P 88   YD
 }
 
 .header.header__switch .navbar .navbar-section,
-.header.header__switch .navbar .navbar-link__home {
+.header.header__switch .navbar .navbar-link__logo {
   transition: none;
 }
 
@@ -563,7 +563,7 @@ YP   YP Y88888P YP   YP Y8888D' Y88888P 88   YD
   transition: all 0.2s ease-in-out;
 }
 
-.navbar-link__home {
+.navbar-link__logo {
   color: var(--color-link-text);
   text-decoration: none;
 }
